--- a/whitepaper/index.htm
+++ b/whitepaper/index.htm
@@ -531,7 +531,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 						</div>
 						<div class="eael-feature-list-content-box">
 							<h3 class="eael-feature-list-title">Contract address</h3>
-						<p class="eael-feature-list-content">0xd9ab41074e50affe42543ca2b69dceea69b659e0</p>
+						<p class="eael-feature-list-content">Soon</p>
 						</div>
 
 					</li>
@@ -550,7 +550,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 						</div>
 						<div class="eael-feature-list-content-box">
 							<h3 class="eael-feature-list-title">Total Supply</h3>
-						<p class="eael-feature-list-content">500,000,0000</p>
+						<p class="eael-feature-list-content">1,000,000,000</p>
 						</div>
 
 					</li>
