--- a/index.htm
+++ b/index.htm
@@ -335,7 +335,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 				<div class="elementor-element elementor-element-75560b8 elementor-align-justify elementor-widget elementor-widget-button" data-id="75560b8" data-element_type="widget" data-settings="{&quot;ekit_we_effect_on&quot;:&quot;css&quot;}" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="tokenswap/index.htm#/swap" target="_blank" class="elementor-button-link elementor-button elementor-size-lg" role="button">
+			<a href="https://poocoin.app/tokens/0x8B374208A767713CA1803bb4f04146bB0Eac1e" target="_blank" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-right">
 				<i aria-hidden="true" class="fas fa-long-arrow-alt-right"></i>			</span>
