--- a/whitepaper/index.htm
+++ b/whitepaper/index.htm
@@ -531,7 +531,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 						</div>
 						<div class="eael-feature-list-content-box">
 							<h3 class="eael-feature-list-title">Contract address</h3>
-						<p class="eael-feature-list-content">Soon</p>
+						<p class="eael-feature-list-content">0xAf3A7d71F8244C709D814f48Ae2C6E8A2Da62e6a</p>
 						</div>
 
 					</li>
@@ -550,7 +550,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 						</div>
 						<div class="eael-feature-list-content-box">
 							<h3 class="eael-feature-list-title">Total Supply</h3>
-						<p class="eael-feature-list-content">1,000,000,000</p>
+						<p class="eael-feature-list-content">10,000,000</p>
 						</div>
 
 					</li>
